Fix mobile spacing

--- a/mobile.css
+++ b/mobile.css
@@ -85,7 +85,7 @@ a:link {
     margin-right: auto;
     width: 85%;
     background-color: rgba(0, 0, 255, 0.35);
-    height: 300px;
+    height: 315px;
     z-index: 999999999;
     position: relative;
 }
